# tg_bot_collections

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  config.py  hy_tg.py  init_tigong_db.py  pyproject.toml  requirements.txt  run.sh  setup.sh  tg.py
.github/workflows/: CI.yaml
handlers/: __init__.py  _telegraph.py  _tts.py  _utils.py  _yi.py  base.py  chatgpt.py  claude.py  cohere.py  dify.py  fake_liuneng.py  gemini.py  github.py  kling.py  llama.py  map.py  qwen.py  sd.py  tts.py  tweet.py  useful.py  yi.py
handlers/summary/: __init__.py  __main__.py  messages.py  utils.py
