
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "pyTelegramBotAPI>=4.16",
    "cairosvg",
    "github-poster",
    "prettymapp",
    "google-generativeai>=0.4",
    "anthropic",
    "telegramify-markdown",
    "openai",
    "requests",
    "urlextract",
    "requests",
    "groq",
    "together>=1.1.5",
    "dify-client>=0.1.10",
    "chattts-fork>=0.0.1",
    "expiringdict>=1.2.2",
    "beautifulsoup4>=4.12.3",
    "Markdown>=3.6",
    "cohere>=5.5.8",
]
requires-python = ">=3.10"
