
[project]
name = "tg_bot_collections"
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "pyTelegramBotAPI>=4.16",
    "cairosvg",
    "github-poster",
    "prettymapp",
    "google-generativeai>=0.4",
    "anthropic",
    "telegramify-markdown",
    "openai",
    "requests",
    "urlextract",
    "groq",
    "together>=1.1.5",
    "dify-client>=0.1.10",
    "expiringdict>=1.2.2",
    "beautifulsoup4>=4.12.3",
    "Markdown>=3.6",
    "cohere>=5.5.8",
    "kling-creator>=0.0.3",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "telethon>=1.40.0",
    "pysocks>=1.7.1",
    "wcwidth>=0.2.13",
]
requires-python = ">=3.10"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python tg.py --debug"